# esg-washing

./: .gitignore  main.py  pyproject.toml  requirements.in  requirements.txt
metadata/: LM_dictionary_lemmatized.csv  anchor_queries_v1.txt  anchor_queries_v2.txt  esg_terms.txt  lda_stopwords.txt  muestras_informes.xlsx  personal_stopwords.txt
src/: config.py  esg_washing_pipeline.py  esgsi_analyzer.py  lexical_document_filter.py  metadata_loader.py  semantic_document_filter.py  text_processor.py  topic_modeler.py
src/esg_washing_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
