[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg_washing_package"
version = "0.1.0"
dependencies = [
    "pandas",
    "pymupdf",
    "spacy",
    "scikit-learn",
    "textblob",
    "loguru",
    "matplotlib",
    "seaborn",
    "gensim",
    "wordcloud"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]