[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg_washing_package"
version = "0.1.2"
dependencies = [
    "pandas",
    "openpyxl",
    "pymupdf",
    "spacy",
    "scikit-learn",
    "loguru",
    "gensim",
    "pysentiment2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]